gitops/apps/prowlarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: prowlarr
  ports:
    - name: http
      port: 9696
      targetPort: 9696
      protocol: TCP
