gitops/apps/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: apps
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Prowlarr
    gethomepage.dev/icon: prowlarr.png
    gethomepage.dev/description: Indexer manager
    gethomepage.dev/href: "http://prowlarr.home.arpa"
spec:
  ingressClassName: traefik
  rules:
    - host: prowlarr.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
